--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <div class="title1"><h1>Shibi</h1></div>
             </div>
             <div class="text1">
-                <p>Current shitcoin world is now <mark>boring</mark>,  only thing u hear is pepe mundane meta, thats why we have a <mark>fresh trend</mark>. Shyba will be the first <mark>"Y"</mark> meta revolution starter, so spread the word and lets make crypto <mark>fun</mark> again!!
+                <p>The number one dog from the Shiba Inu bloodline and he is cute 
+                    <br>so why not ape?
                 </p>
-                <p class="lower">THE "I" TO "Y" REVOLUTION BEGINS</p>
             </div>
             <div class="buttons-contract-container">
                 <div class="buttons">
-                    <button class="btn1" onclick="window.location.href=';'">Buy</button>
-                    <button class="btn2" onclick="window.location.href=';'">Chart</button>
+                    <button class="btn1" onclick="window.location.href=''">Buy</button>
+                    <button class="btn2" onclick="window.location.href=''">Chart</button>
                 </div>
                 <div class="contract">
                     <div class="contract-text">
@@ -42,14 +42,19 @@
                     </div>
                 </div>
             </div>
+            <div class="sticky-buy-container">
+                <div class="sticky-buy" onclick="window.location.href=''">
+                    <div class="sticky-img"><img src="images/shibi-logo.png" class="logo-img"></div>
+                    <div class="sticky-text"><p>buy shibi</p></div>
+                </div>
+            </div>
         </div>
     </div>
     <div id="about">
         <div class="text-container">
             <div class="title2"><h1>About Shibi</h1></div>
-            <div class="text2"><p>Shyba is here to <mark>replace</mark> the old players with  a fresh new revolution where we swap the <mark>"I"</mark> for <mark>"Y"</mark>  which will start the new trend and aspire other teams to follow us, with that being said lets <mark>kill</mark>  the old <mark>shiba</mark>. 
-                <br><br>New wave incoming!
-                TIME FOR A CHANGE!!!
+            <div class="text2"><p>Shibi is a Shiba Inu descendant, that will become the biggest top dog in the whole crypto space!!! 
+                <br>Despite him being small and cute, he will still be the number one!!
             </p></div>
         </div>
         <div class="photo-container">
@@ -181,7 +186,7 @@
     <footer>
         <div class="joinus-container">
             <div class="joinus"><h2>Join Us!</h2></div>
-            <button class="btn3" onclick="window.location.href=';'">Join our tg community
+            <button class="btn3" onclick="window.location.href='https://t.me/OfficialShibi'">Join our tg community
             </button>
         </div>
         <div class="end-big-container">
@@ -196,8 +201,8 @@
                 </div>
                 <div class="end-socials-arrow">
                     <div class="end-socials">
-                        <div class="tg-img" onclick="location.href=''"></div>
-                        <div class="tw-img" onclick="location.href=''"></div>
+                        <div class="tg-img" onclick="location.href='https://t.me/OfficialShibi'"></div>
+                        <div class="tw-img" onclick="location.href='https://twitter.com/ShibiCoin'"></div>
                     </div>
                     <div class="end-arrow"><img class="arrow-img" onclick="scrollToTop()" src="images/arrow.png"></div>
                 </div>
