--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         ⦿ Marketing <br>
                         ⦿ Whitepaper <br>
                         ⦿ Audit <br>
-                        ⦿ Learning more about Shyba <br>
+                        ⦿ Learning more about Shibi <br>
                     </p>
                 </div>
             </div></div>
