--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
             <div class="mini-container">
                 <div class="h-img"><img class="h-img-img" src="images/htb-4.png"></div>
                 <div class="h-txt">
-                    <div class="h-title"><p>Set Up Your Wallet</p></div>
-                    <div class="h-info"><p>Setup your wallet using metamask or trustwallet to get started. Desktop users, download the google chrome extension by going to metamask.io.</p></div>
+                    <div class="h-title"><p>ENJOY</p></div>
+                    <div class="h-info"><p>After the above step there is no need for more work, JUST HOLD and ENJOY the ride to the moon.</p></div>
                 </div>
             </div>
         </div>
