--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
             </div>
             <div class="buttons-contract-container">
                 <div class="buttons">
-                    <button class="btn1" onclick="window.location.href=''">Buy</button>
-                    <button class="btn2" onclick="window.location.href=''">Chart</button>
+                    <button class="btn1" onclick="window.location.href='https://www.dextools.io/app/en/ether/pair-explorer/0x99bdf4536c8ca1a0dd87cd06135971fc83f3a614'">Buy</button>
+                    <button class="btn2" onclick="window.location.href='https://www.dextools.io/app/en/ether/pair-explorer/0x99bdf4536c8ca1a0dd87cd06135971fc83f3a614'">Chart</button>
                 </div>
                 <div class="contract">
                     <div class="contract-text">
-                        <p>CA:</p><p id="contract-text"></p>
+                        <p>CA:</p><p id="contract-text">0x8083C9790e7d243d49A3
+                            <br>06648300BF6A74B91970</p>
                     </div>
                     <div class="contract-btn">
                         <button class="contract-btn-img" onclick="copyToClipboard()"></button>
@@ -43,7 +44,7 @@
                 </div>
             </div>
             <div class="sticky-buy-container">
-                <div class="sticky-buy" onclick="window.location.href=''">
+                <div class="sticky-buy" onclick="window.location.href='https://www.dextools.io/app/en/ether/pair-explorer/0x99bdf4536c8ca1a0dd87cd06135971fc83f3a614'">
                     <div class="sticky-img"><img src="images/shibi-logo.png" class="logo-img"></div>
                     <div class="sticky-text"><p>buy shibi</p></div>
                 </div>
